@@ -25,6 +25,7 @@ Description: The RQuantLib package makes parts of QuantLib visible to the R
  QuantLib itself is released under a somewhat less restrictive Open Source
  license (see QuantLib-License.txt).
 Depends: R (>= 2.10.0), Rcpp (>= 0.8.4)
+Suggests: rgl
 LinkingTo: Rcpp
 SystemRequirements: QuantLib library (>= 0.9.9) from http://quantlib.org, 
  Boost library from http://www.boost.org
